2024-09-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): added the section
	"13. An editable HELP".

	* eepitch.el (eepitch-iex): new function.

	* eev-testblocks.el (ee-insert-test-elixir-mode): new function.

2024-09-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-yttranscript0-links): new name: the function
	`find-yttranscript-links' was renamed to
	`find-yttranscript0-links'.
	(find-yttranscript-links): new function, based on code by Bruno
	Macedo.

2024-09-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-latex-links): deleted the reference to
	texworks.

2024-09-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-try-sly-intro): rewrote several sections.

2024-09-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-sly): new function.

2024-09-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-clhsdoci, ee-clhs-lookup-index): new
	functions.

	* eev-rstdoc.el (ee-rstdoc-default-defuns): added `:clhs'.

	* eev-intro.el (find-try-sly-intro): new function.

	* eev-tlinks.el (find-try-sly-links): point to
	`find-try-sly-intro'.

	* eev-plinks.el (find-wget-org): new function.

2024-08-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024lean4of0a2".

2024-08-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-edit.el (ee-copy-this-line-to-kill-ring): fixed a bug/typo -
	"end" was using "bol" instead of "eol"!

	* eev-intro.el (find-windows-beginner-intro): added the section
	"12. Install qdraw".

	* eev-tlinks.el (find-qdraw-links): new function.

2024-08-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): added a "sudo
	apt-get install -y gcl gcl-doc"

2024-08-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024convite".

2024-08-05  Eduardo Ochs  <eduardoochs@gmail.com>
